# deepin-v2t

./: .gitignore  AUDIO_RESAMPLING.md  CONFIG_AUTO_CREATE_FIX.md  CPU_FIX.md  Cargo.toml  DEB_PACKAGE_PLAN.md  DEB_PACKAGE_PLAN_REVISED.md  FCITX5_ADDON_FIX.md  FIX_BIAODIAN_ISSUE.md  GIT_COMMIT_SUMMARY.md  HOTWORDS_CONFIG.md  HYBRID_MODE_IMPLEMENTATION.md  HYBRID_MODE_TEST_GUIDE.md  INSTALLATION_PROGRESS.md  INTEGRATION_TEST_REPORT.md  MODEL_OPTIMIZATION.md  MODEL_PATH_FIX.md  MULTITHREADING_DESIGN.md  OPERATION_MODE_CHANGE.md  PARAFORMER_DEBUG_STEPS.md  PARAFORMER_MIGRATION.md  PARAFORMER_QUICKSTART.md  PERFORMANCE_OPTIMIZATION_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_ROLLBACK.md  PHASE0_DECISION.md  PHASE1_PLAN.md  PREEDIT_INTERACTION_DESIGN.md  PROJECT_STATUS_FINAL.md  PROJECT_SUMMARY.md  PUNCTUATION_DEBUG_SOLUTION.md  PUNCTUATION_ENGINE_ANALYSIS.md  PUNCTUATION_FIX.md  PUNCTUATION_ITN_FIX.md  QUICK_REFERENCE.md  README.md  REALTIME_PUNCTUATION.md  SIZE_OPTIMIZATION.md  SMART_PUNCTUATION_IMPLEMENTATION.md  STREAMING_COMMIT_OPTIMIZATION.md  (+52 more)
.claude/: settings.local.json
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  PHASE1_COMPLETION_REPORT.md  PHASE1_FINAL_SUMMARY.md  PHASE2.1_VAD_COMPLETION_REPORT.md  PHASE2.2_ASR_COMPLETION_REPORT.md  PHASE2.3_ITN_COMPLETION_REPORT.md  PHASE2.3_ITN_PROGRESS.md  PHASE2.4_PUNCTUATION_COMPLETION_REPORT.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_E2E_TEST_REPORT.md  PHASE2_FINAL_COMPLETION_REPORT.md  PHASE2_OVERALL_PROGRESS.md  PHASE2_PLAN.md  PHASE3_4_COMPLETION_REPORT.md  PIPEWIRE_INTEGRATION_GUIDE.md  PROJECT_COMPLETE_SUMMARY.md  PROJECT_STATUS.md  TESTING_GUIDE.md  USER_GUIDE.md  endpoint_detector_guide.md
fcitx5-vinput/: CMakeLists.txt  vinput-addon.conf  vinput.conf
fcitx5-vinput-mvp/: CMakeLists.txt  README.md  build.sh  test_fcitx5_ffi.cpp  vinput-im.conf  vinput.conf
fcitx5-vinput-mvp/src/: vinput_engine.cpp  vinput_engine.h
fcitx5-vinput/include/: vinput_core.h  vinput_engine.h  vinput_state.h
fcitx5-vinput/src/: vinput_engine.cpp  vinput_state.cpp
models/: download_silero_vad.sh  model-info.txt  streaming
vinput-core/: Cargo.toml  build.rs  cbindgen.toml
vinput-core/examples/: BENCHMARK.md  benchmark.rs  complete_e2e_test.rs  e2e_demo.rs  e2e_integration.rs  itn_demo.rs  itn_performance.rs  offline_test.rs  phase2_complete_e2e.rs  pipewire_capture.rs  punctuation_demo.rs  streaming_pipeline_test.rs  test_asr_actual.rs  test_asr_imports.rs  test_asr_variants.rs  test_biaodian.rs  test_combinations.rs  test_contains_chinese_number.rs  test_currency_itn.rs  test_date_rule.rs  test_debug_yiqian.rs  test_device_enum.rs  test_difang.rs  test_direct_itn.rs  test_edge_cases.rs  test_generation_suffix.rs  test_guard.rs  test_hybrid_mode.rs  test_jiuling.rs  test_pipewire_subprocess.rs  test_recognition_variants.rs  test_sanbai.rs  test_smart_guard.rs  test_specific.rs  test_split_logic.rs  test_tokenize.rs  test_year.rs  test_year_debug.rs  test_yikaishi.rs  test_yiqian.rs  (+2 more)
vinput-core/src/: error.rs  lib.rs  undo.rs
vinput-core/src/asr/: mod.rs  recognizer.rs
vinput-core/src/audio/: audio_queue.rs  mod.rs  pipewire_stream.rs  ring_buffer.rs
vinput-core/src/config/: mod.rs
vinput-core/src/endpointing/: detector.rs  mod.rs
vinput-core/src/ffi/: exports.rs  mod.rs  safety.rs  types.rs
vinput-core/src/hotwords/: engine.rs  mod.rs  parser.rs
vinput-core/src/itn/: chinese_number.rs  engine.rs  english_number.rs  guards.rs  mod.rs  rules.rs  tokenizer.rs
vinput-core/src/punctuation/: config.rs  engine.rs  mod.rs  pause_engine.rs  rules.rs
vinput-core/src/state_machine/: mod.rs
vinput-core/src/streaming/: mod.rs  pipeline.rs
vinput-core/src/undo/: mod.rs
vinput-core/src/vad/: config.rs  energy_gate.rs  hysteresis.rs  manager.rs  mod.rs  pre_roll_buffer.rs  silero.rs  transient_filter.rs
vinput-core/tests/: itn_integration_tests.rs  pipeline_e2e_tests.rs
vinput-core/tests/testdata/: 001.expected  002.expected
vinput-gui/: Cargo.toml
vinput-gui/src/: about_panel.rs  advanced_settings_panel.rs  basic_settings_panel.rs  config.rs  endpoint_panel.rs  hotwords_editor.rs  main.rs  model_manager_panel.rs  punctuation_panel.rs  recognition_settings_panel.rs  vad_asr_panel.rs
