[workspace]
members = ["vinput-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["V-Input Team <vinput@deepin-v2t.local>"]

[workspace.dependencies]
# 日志
tracing = "0.1"

# 错误处理
thiserror = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# 跨线程通道
crossbeam-channel = "0.5"

# Lock-free SPSC 环形缓冲（用于音频）
rtrb = "0.3"

# 文件监听
notify = "7"

# 正则表达式
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
