[workspace]
members = ["vinput-core", "vinput-gui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["V-Input Contributors"]

[workspace.dependencies]
tracing = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
crossbeam-channel = "0.5"
rtrb = "0.3"
notify = "6.1"
regex = "1.11"
