[package]
name = "vinput-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]  # cdylib for FFI, rlib for examples/tests

[features]
default = []
debug-logs = ["tracing-subscriber", "tracing-journald"]
vad-onnx = ["ort"]  # VAD ONNX 推理功能
pipewire-capture = []  # 真实 PipeWire 音频捕获（需要 PipeWire 环境）

[dependencies]
# Workspace dependencies
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
crossbeam-channel.workspace = true
rtrb.workspace = true
notify.workspace = true
regex.workspace = true

# PipeWire (audio capture)
pipewire = "0.9"

# Configuration and file paths
dirs = "6.0"

# ONNX Runtime (for VAD inference in Phase 1)
# Use system ONNX Runtime (already installed at /usr/local/lib)
# Avoid download-binaries to skip OpenSSL dependency
# Enable with: cargo build --features vad-onnx
ort = { version = "2.0.0-rc.11", default-features = false, optional = true }

# ITN (Inverse Text Normalization)
# 注意：cn2an-rs 可能不存在于 crates.io，我们将手动实现中文数字转换

# 日志输出 (可选，仅在 debug-logs feature 启用时)
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
tracing-journald = { version = "0.3", optional = true }

[build-dependencies]
bindgen = "0.71"
cbindgen = "0.28"

[dev-dependencies]
# 用于测试和示例
hound = "3.5"  # WAV 文件读写
ctrlc = "3.4"  # Ctrl+C 信号处理
tempfile = "3.13"  # 临时文件（用于测试）
